--- a/fourth.html
+++ b/fourth.html
@@ -4,7 +4,7 @@
         <img src="https://i.postimg.cc/9MMpwBsX/download-1.jpg">
         <figcaption>INFO</figcaption>
         <span class="price"></span>
-        <a class="button" href="dumdumbuy.html">Click Here </a>
+        <a class="button" href="info.html">Click Here First </a>
         </figure>
 
     <figure>
