--- a/dumdumbuy.html
+++ b/dumdumbuy.html
@@ -44,14 +44,14 @@
     <div class="container">
         <h1 id="itemTitle">Item Title</h1>
         <p>Contact <span id="contactName">John Doe</span> to buy this item.</p>
-        <p>Phone Number is <span id="Phone"></span></p>
+        <p>Email is <span id="Phone"></span></p>
     </div>
 
     <script>
         // Set the item title and contact name directly in the script
-        const itemTitle = "Dum dum lolipops"; // Change this to the desired item title
-        const contactName = "William"; // Change this to the desired contact name
-        const Phone = "(555)-555-5555";
+        const itemTitle = ""; // Change this to the desired item title
+        const contactName = "Us"; // Change this to the desired contact name
+        const Phone = "wpamarket@gmail.com";
 
         // Update the page content
         document.getElementById('itemTitle').textContent = itemTitle;
